# MapMesh

./: CMakeLists.txt  CUbSphere.ma  CurveContext.cpp  CurveContext.h  DualUI.py  DualViewportCmd.cpp  DualViewportCmd.h  DualViewportUICmd.cpp  DualViewportUICmd.h  FitDeformerNode.cpp  FitDeformerNode.h  MatchMeshCmd.cpp  MatchMeshCmd.h  MatchMeshCreatePinCmd.cpp  MatchMeshCreatePinCmd.h  MatchMeshDebugClosestFaceCmd.cpp  MatchMeshDebugClosestFaceCmd.h  MatchMeshMoveFacesCmd.cpp  MatchMeshMoveFacesCmd.h  MatchMeshShelfCmd.cpp  MatchMeshShelfCmd.h  PinBuild.ps1  PinContext.cpp  PinContext.h  PinLocatorNode.cpp  PinLocatorNode.h  README.md  RbfSolver.h  build.ps1  buildCluster.ps1  layerWidget.py  locatorFollowDeformer_build.ps1  neighboringVertices_build.ps1  pluginMain.cpp
ClosestPoint/: README.md  app.py  engine_bvh.py  engine_math.py  requirements.txt  ui_main.py  ui_widgets.py
FollowDeformer/: CMakeLists.txt  locatorFollowDeformer.cpp  locatorFollowDeformer.txt
closestPointOnMesh-main/: CMakeLists.txt  README.md
closestPointOnMesh-main/data/: cube_pts.txt  teapot_pts.txt
closestPointOnMesh-main/doc/: Doxyfile
closestPointOnMesh-main/include/: Mesh.h  PointQuery.h
closestPointOnMesh-main/src/: Mesh.cpp  PointQuery.cpp  main.cpp
harmonicDef/: CMakeLists.txt  TESTING.md  harmonicDeformer.cpp
neighboringvertices/: CMakeLists.txt  neighboringvertices_node.cpp  neighboringvertices_node.h  readme.txt
pinObject/: CMakeLists.txt  PinLocator.cpp  PinLocator.h  PinLocatorPlugin.cpp
